crates/store/re_tf/src/snapshots/re_tf__transform_forest__tests__simple_entity_hierarchy__transform_from_to__top_pinhole_child2d.snap
---
source: crates/store/re_tf/src/transform_forest.rs
expression: "pretty_print_transform_frame_ids_in(&result, &all_transform_frame_ids)"
---
[
    (
        tf#/,
        Ok(
            TransformInfo {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            0.002,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.004,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.003,
                        ),
                    },
                    translation: DVec3(
                        47.998,
                        99.996,
                        -1.5,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                0.002,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                0.004,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                0.003,
                            ),
                        },
                        translation: DVec3(
                            47.998,
                            99.996,
                            -1.5,
                        ),
                    },
                ],
                target_from_archetype: {},
            },
        ),
    ),
    (
        tf#/top,
        Ok(
            TransformInfo {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            0.002,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.004,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.003,
                        ),
                    },
                    translation: DVec3(
                        48.0,
                        99.996,
                        -1.5,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                0.002,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                0.004,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                0.003,
                            ),
                        },
                        translation: DVec3(
                            48.019999999999996,
                            99.996,
                            -1.5,
                        ),
                    },
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                0.002,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                0.004,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                0.003,
                            ),
                        },
                        translation: DVec3(
                            48.04,
                            99.996,
                            -1.5,
                        ),
                    },
                ],
                target_from_archetype: {
                    "rerun.archetypes.Boxes3D": [
                        DAffine3 {
                            matrix3: DMat3 {
                                x_axis: DVec3(
                                    0.002,
                                    0.0,
                                    0.0,
                                ),
                                y_axis: DVec3(
                                    0.0,
                                    0.004,
                                    0.0,
                                ),
                                z_axis: DVec3(
                                    0.0,
                                    0.0,
                                    0.003,
                                ),
                            },
                            translation: DVec3(
                                48.019999999999996,
                                100.036,
                                -1.5,
                            ),
                        },
                        DAffine3 {
                            matrix3: DMat3 {
                                x_axis: DVec3(
                                    0.002,
                                    0.0,
                                    0.0,
                                ),
                                y_axis: DVec3(
                                    0.0,
                                    0.004,
                                    0.0,
                                ),
                                z_axis: DVec3(
                                    0.0,
                                    0.0,
                                    0.003,
                                ),
                            },
                            translation: DVec3(
                                48.04,
                                100.076,
                                -1.5,
                            ),
                        },
                    ],
                },
            },
        ),
    ),
    (
        tf#/top/pinhole,
        Ok(
            TransformInfo {
                root: tf#/top/pinhole,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        -2.0,
                        0.0,
                        0.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                1.0,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                1.0,
                            ),
                        },
                        translation: DVec3(
                            -2.0,
                            0.0,
                            0.0,
                        ),
                    },
                ],
                target_from_archetype: {},
            },
        ),
    ),
    (
        tf#/top/child3d,
        Ok(
            TransformInfo {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            0.002,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.004,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.003,
                        ),
                    },
                    translation: DVec3(
                        48.0,
                        99.996,
                        -1.497,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                0.002,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                0.004,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                0.003,
                            ),
                        },
                        translation: DVec3(
                            48.0,
                            99.996,
                            -1.497,
                        ),
                    },
                ],
                target_from_archetype: {},
            },
        ),
    ),
    (
        tf#/top/nonexistent,
        Err(
            UnknownSourceFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
    (
        tf#/top/pinhole/child2d,
        Ok(
            TransformInfo {
                root: tf#/top/pinhole,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        0.0,
                        0.0,
                        0.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                1.0,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                1.0,
                            ),
                        },
                        translation: DVec3(
                            0.0,
                            0.0,
                            0.0,
                        ),
                    },
                ],
                target_from_archetype: {},
            },
        ),
    ),
]
